<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.talexck</groupId>
    <artifactId>skybattle</artifactId>
    <version>0.2.0</version>
    <packaging>jar</packaging>

    <name>SkyBattle</name>
    <description>MCC Island style Sky Battle (Solo &amp; Quads) for Paper 1.21.11 - 26.x.</description>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <paper.version>1.21.11-R0.1-SNAPSHOT</paper.version>
    </properties>

    <!--
      Default build compiles against the oldest supported API (1.21.11) so the jar loads on
      1.21.11 and every newer server (26.1 - 26.3). Use -Ppaper-26 to check against the 26.x API.
    -->
    <profiles>
        <profile>
            <id>paper-26</id>
            <properties>
                <paper.version>[26.3.build,)</paper.version>
            </properties>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>${paper.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.talexck.minigamelib</groupId>
            <artifactId>minigamelib</artifactId>
            <version>0.2.0</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}-${project.version}</finalName>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                </configuration>
            </plugin>
            <plugin>
                <!-- Zips resourcepack/pack into the jar as resourcepack/skybattle-resourcepack.zip -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>zip-resource-pack</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <zip destfile="${project.build.outputDirectory}/resourcepack/skybattle-resourcepack.zip"
                                     basedir="${project.basedir}/resourcepack/pack"/>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
